syntax = "proto3";

package pcbook;

option go_package = "./pb";
option java_package = "com.github.jwambugu.pcbook.pb";
option java_multiple_files = true;

import "processor.proto";
import "memory.proto";
import "storage.proto";
import "screen.proto";
import "keyboard.proto";
import "google/protobuf/timestamp.proto";

// Laptop represents a laptop device
message Laptop {
  string id = 1;
  string brand = 2;
  string name = 3;
  CPU cpu = 4;
  Memory ram = 5;
  repeated GPU gpus = 6;
  repeated Storage storages = 7;
  Screen screen = 8;
  Keyboard keyboard = 9;

  oneof weight{
    double weight_kg = 10;
    double weight_lb = 11;
  }

  double price_usd = 12;
  uint32 release_year = 13;
  google.protobuf.Timestamp updated_at = 14;
}

// Filter represents a filter for a laptop with the specified specs
message Filter {
  double max_price_usd = 1;
  uint32 min_cpu_cores = 2;
  double min_cpu_frequency = 3;
  Memory min_ram = 4;
}

// CreateLaptopRequest is the request message for the CreateLaptop RPC
message CreateLaptopRequest {
  Laptop laptop = 1;
}

// CreateLaptopResponse is the response message for the CreateLaptop RPC
message CreateLaptopResponse {
  string id = 1;
}

// SearchLaptopRequest represents the request message for the SearchLaptop RPC
message SearchLaptopRequest {
  Filter filter = 1;
}

// SearchLaptopResponse represents the response message for the SearchLaptop RPC
message SearchLaptopResponse {
  Laptop laptop = 1;
}

// LaptopService is the interface for the Laptop service
service LaptopService {
  rpc CreateLaptop(CreateLaptopRequest) returns (CreateLaptopResponse) {}
  rpc SearchLaptop(SearchLaptopRequest) returns (stream SearchLaptopResponse) {}
}